# real-time-fraud-detection-with-kafka

./: .gitignore  Agents.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.ml_inference.txt  requirements.producer.txt  requirements.services.txt  requirements.txt
common/: codec.py  kafka.py  logging.py  settings.py
consumers/ml_engine/: main.py
consumers/rule_engine/: main.py
docker/: Dockerfile.api  Dockerfile.consumer  Dockerfile.producer
model/: model_meta.json
notebooks/: model_training.ipynb
producer/: csv_producer.py
services/alert_service/: app.py
services/dashboard/: app.py
services/transaction_api/: app.py
